Issue #1891872  Fixes overlapping text

--- a/soft_length_limit.css
+++ b/soft_length_limit.css
@@ -1,7 +1,6 @@
 .soft-length-limit-tooltip {
   display: inline-block;
   font-style: italic;
-  position: absolute;
   z-index: 10;
 }
 
@@ -16,9 +15,11 @@
   background-position: left top;
   background-color: transparent;
   background-size: 15px 15px;
-  padding: 0 0 0 20px;
-  left: auto !important;
-  right: 10px;
+  padding: 0 20px;
+  text-align: right;
+  display: block;
+  float: right;
+  min-height: 15px;
 }
 .field-type-text .form-item .soft-length-limit-tooltip.min-style-tooltip.exceeded.under-min {
   background-image: none;
